# abide

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  project-seed.md  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
.claude/commands/: generate-sft.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.hypothesis/constants/: 05678775714d4557  20f3d78a804c4686  21c1ce61302d08cd  298e43a12450ed21  2b6e2ac8742db854  3ef13bee2ee9bf2c  3fd70ff51b9e195e  484f9df29538f747  4a66d34bb07f050a  4d478fcc5782bc14  5fd120d3e73f2834  68251a1547e68579  693234eec59e540e  6b9c707cc5e5a463  836c48c8dbc03e2c  857a01e0dec65db3  98875c7e7ee1691f  9f2b0f7aad4a6118  a3aac134c58a8e0c  d343893edc58e9e8  dd1e9ab09939f80e  e778b042613f419c  e8a93a8e63347f80
config/: sft_generation.yaml
data/sft/: abecedarian_synthetic_curated.jsonl  abecedarian_synthetic_curated.summary.json  abide_synthetic_rl_default.jsonl  abide_synthetic_rl_default.summary.json  abide_warmup_curated-0001.jsonl  abide_warmup_curated-0002.jsonl  abide_warmup_curated-0003.jsonl  abide_warmup_curated-0004.jsonl  abide_warmup_curated.summary.json  abide_warmup_full_surface-0001.jsonl  abide_warmup_full_surface-0002.jsonl  abide_warmup_full_surface-0003.jsonl  abide_warmup_full_surface-0004.jsonl  abide_warmup_full_surface-0005.jsonl  abide_warmup_full_surface-0006.jsonl  abide_warmup_full_surface-0007.jsonl  abide_warmup_full_surface-0008.jsonl  abide_warmup_full_surface-0009.jsonl  abide_warmup_full_surface.summary.json  codex_spark_full_surface_adjudicated_retry_tasks.jsonl  codex_spark_full_surface_adjudicated_retry_tasks.summary.json  codex_spark_full_surface_all_judge_tasks.jsonl  codex_spark_full_surface_all_judge_tasks.summary.json  codex_spark_full_surface_all_judgments.jsonl  codex_spark_full_surface_all_judgments.summary.json  codex_spark_full_surface_candidates.jsonl  codex_spark_full_surface_judgments.jsonl  codex_spark_full_surface_judgments.summary.json  codex_spark_full_surface_quality_validated.jsonl  codex_spark_full_surface_retry_curated_poemlike.jsonl  codex_spark_full_surface_retry_curated_poemlike.summary.json  codex_spark_full_surface_retry_judgments.jsonl  codex_spark_full_surface_retry_judgments.summary.json  codex_spark_full_surface_retry_remaining_judge_rejects.jsonl  codex_spark_full_surface_retry_validated_merged.jsonl  codex_spark_full_surface_retry_validated_merged.summary.json  codex_spark_full_surface_tasks.jsonl  codex_spark_full_surface_tasks.summary.json  codex_spark_full_surface_validated.jsonl  codex_spark_full_surface_validated.summary.json  (+18 more)
experiments/: baguettotron_form_variance.json  confirmation_results.jsonl  extended_results.jsonl  form_variance.json  grpo_analysis.md  grpo_param_search.md  param_search_results.jsonl
history/: 2026-03-31-audit-ledger.md
history/refactor/: BOARD.md  README.md  WORKLOG.md
history/refactor/locks/: RF-001--codex-main.md  RF-002--codex-main.md  RF-013--codex-main.md  RF-080--codex.md  RF-081--codex.md  RF-086--codex.md  RF-088--codex.md  RF-091--codex.md
history/refactor/tickets/: RF-001.md  RF-002.md  RF-003.md  RF-004.md  (+89 more)
scripts/: build_adjudicated_retry_tasks.py  build_codex_spark_retry_tasks.py  build_codex_spark_warmup_tasks.py  build_full_surface_supplemental_seeds.py  build_poemness_judge_tasks.py  build_synthetic_sft_dataset.py  build_warmup_sft_corpus.py  eval_local.py  extended_param_search.py  find_learnable_forms.py  merge_codex_spark_warmup_candidates.py  merge_poemness_judge_results.py  model_profiles.py  openrouter_generator.py  param_search.py  prepare_gemma4_runtime.sh  prepare_prime_rl_runtime.sh  prepare_verifiers_runtime.sh  prime_rl_sweep.py  prime_rl_validate.py  prompt_generator.py  reward_telemetry.py  run_ablation1_spenserian.sh  run_forms_mini.py  run_grpo.sh  run_grpo_gemma2.sh  run_grpo_gemma3.sh  run_grpo_gemma3n.sh  run_grpo_gemma4_e4b.sh  run_grpo_learnable.sh  run_grpo_traditional.sh  run_grpo_trl.sh  run_grpo_trl_baguettotron.sh  run_novel_forms_eval.py  run_param_search.sh  run_prime_rl_gemma4_e2b.sh  run_verifiers_demo.py  serve_local.py  sft_orchestrator.py  train_grpo.py  (+4 more)
specs/: sft_warmup_pipeline.md
src/: sitecustomize.py
src/abide/: __init__.py  synth_trace.py  verifiers_vllm_server.py  version.py
src/abide_poetry_forms/: __init__.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/constraints/: __init__.py  test_degenerate_constraint_surface.py  test_lexical.py  test_meter.py  test_operators.py  test_relational.py  test_shape.py  test_structural.py  test_types.py
tests/fixtures/: __init__.py  poems.py  test_form_validation.py
tests/forms/: __init__.py  test_ballad_pass_semantics.py  test_catalog.py  test_constrained_forms.py  test_degenerate_reward_surface.py  test_epigram_proxy.py  test_exact_structure_mutation_harness.py  test_exported_form_surface.py  test_fibonacci_and_free_forms.py  test_fixture_mutation_harness.py  test_form_docstrings.py  test_forms.py  test_generic_form_claims.py  test_haiku_tanka_pass_semantics.py  test_hard_forms.py  test_japanese_and_shape_forms.py  test_manual_threshold_forms.py  test_mathematical_forms.py  test_novel_forms.py  test_property_mutation_harness.py  test_rl_default_forms.py  test_shell_form_contracts.py  test_sonnet_pass_semantics.py  test_training_safe_forms.py  test_world_and_modern_forms.py
tests/inference/: test_analyzer.py
tests/integration/: test_abide_poetry_forms.py  test_build_full_surface_supplemental_seeds.py  test_build_warmup_sft_corpus.py  test_codex_spark_warmup.py  test_model_profiles.py  test_poemness_judge.py  test_prime_rl_sweep.py  test_prime_rl_validate.py  test_prompt_generator.py  test_pyproject_training_sync.py  test_reward_telemetry.py  test_synthetic_sft.py  test_train_grpo.py  test_train_grpo_baguettotron.py  test_train_grpo_trl.py  test_train_prime_rl.py  test_uv_repo_tooling.py
tests/primitives/: __init__.py  test_meter.py  test_phonetics.py  test_preprocessing.py  test_similarity.py
tests/specs/: test_form_specs.py
tests/verifiers/: __init__.py  test_verifiers.py
(+73 files in other folders)
