[project]
name = "abide"
version = "0.1.0"
description = "Composable constraint algebra for specifying and auto-verifying poetic forms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Darren" }
]
keywords = ["poetry", "nlp", "verification", "reinforcement-learning", "constraints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pronouncing>=0.2.0",       # CMU Pronouncing Dictionary wrapper
    "setuptools",               # Required by pronouncing for pkg_resources
    "numpy>=1.24.0",            # Numerical operations
    "jellyfish>=1.0.0",         # Phonetic encodings (Soundex, Metaphone, etc.)
    "pyphen>=0.14.0",           # Hyphenation for syllable fallback
]

[project.optional-dependencies]
# For neural approaches to stress/pronunciation prediction
nn = [
    "torch>=2.0.0",
]
# Full NLP toolkit (heavier)
nlp = [
    "nltk>=3.8.0",
]
# Evaluation framework (LLM inference + verifiers)
evals = [
    "datasets>=2.0.0",          # HuggingFace datasets
    "httpx>=0.27.0",            # HTTP client for OpenRouter
    "openai>=1.0.0",            # OpenAI client (for verifiers compat)
    "verifiers>=0.1.0",         # RL training framework
]
# Local training with GRPO
training = [
    "torch>=2.0.0",
    "transformers>=4.50.0",     # For Gemma 3n support
    "datasets>=2.0.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",             # LoRA training
    "trl>=0.12.0",              # GRPO trainer
    "bitsandbytes>=0.43.0",     # Quantization
    "wandb>=0.16.0",            # Experiment tracking
]
# vLLM inference server
vllm = [
    "vllm>=0.11.0",
    "timm>=1.0.17",             # For Gemma 3n vision backbone
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",      # Property-based testing
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]
# All optional dependencies
all = [
    "abide[nn,nlp,evals,dev,training,vllm]",
]

[project.urls]
Repository = "https://github.com/darren/abide"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abide"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# ============================================================================
# uv configuration
# ============================================================================
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["src/abide"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

# ============================================================================
# mypy configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "pronouncing.*",
    "jellyfish.*",
    "pyphen.*",
    "hypothesis.*",
    "datasets.*",
    "datasets",
    "httpx.*",
    "httpx",
    "openai.*",
    "openai",
    "verifiers.*",
    "verifiers",
]
ignore_missing_imports = true

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip() without strict= (intentional for unequal lengths)
    "ARG001", # unused function argument (common in abstract methods)
    "SIM102", # nested if statements (often clearer than combined conditions)
    "SIM108", # ternary operators (often less readable than if/else)
    "C416",   # unnecessary list comprehension (explicit comprehensions preferred)
]

[tool.ruff.lint.isort]
known-first-party = ["abide"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]  # Allow assert and unused args in tests
